# fred-mod-whoisd

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  ChangeLog  ChangeLog.rst  Makefile  Makefile.am  Makefile.corba  Makefile.in  Makefile.new  README  README.rst  aclocal.m4  config.h.cmake  config.h.in  configure  configure.ac  disc.txt  doxy.conf  doxy.conf.in  examples-toolkit.c  fred-mod-whoisd.spec.in  httpd-whois.conf  mod_whoisd.c  modules.mk  prevent.sh  test-load.sh  test.c  test.py  whois-client.c  whois-client.h  whois_test.c
conf/: 02-fred-mod-whoisd-apache.conf  02-fred-mod-whoisd-apache.conf.in  fred-mod-whoisd-apache.conf.in
contrib/fedora/: Makefile  fred-mod-whoisd.spec
doc/: mainpage.h
scripts/docker/centos:7/: Dockerfile
scripts/docker/fedora:29/: Dockerfile
scripts/docker/fedora:30/: Dockerfile
scripts/docker/fedora:32/: Dockerfile
scripts/docker/fedora:33/: Dockerfile
scripts/docker/fedora:35/: Dockerfile
scripts/docker/fedora:rawhide/: Dockerfile
scripts/docker/ubuntu:20.04/: Dockerfile
unittests/: test_whois.py  test_whois.py.in
